# advent

./: Cargo.toml  config.toml  manifest.yaml  settings.gradle.kts  setup.sh
app/: build.gradle.kts
assets/: .fireball.kra-autosave.kra~  .turret.kra-autosave.kra  SpaceBackground1.png~  SpaceStation.kra  bullet.kra  bullet.kra~  bullet.png~  collision_smoke.kra  collision_smoke.kra~  collision_smoke.png~  fireball.kra  fireball.kra~  rock.kra  rock.kra~  spaceStation1.kra  spaceStation1.kra~  spaceStation1.png~  spaceStation2.kra  spaceStation2.kra~  spaceStation2.png~  turret.kra  turret.kra~  turret1.kra  turret1.kra~  turret2.kra  turret2.kra~
src/: adventui.rs  asset_loader.rs  components_and_resources.rs  config.rs  enemy.rs  envtools.rs  game.rs  game_plugin.rs  lib.rs  main.rs  player.rs  utility.rs
