[package]
name = "advent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = "0.16.1"
bevy_rapier2d = "0.30.0"
rand = "0.9.0"
serde = "1.0.219"
toml = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "advent"
path = "src/lib.rs"

[[bin]]
name = "advent"
path = "src/main.rs"

[package.metadata.android]
package = "com.cosmos545.advent"
apk_name = "Advent"
assets = "assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.signing.release]
path = "C:/Users/nitec/.android/debug.keystore"
keystore_password = "android"

[package.metadata.android.sdk]
target_sdk_version = 36

[package.metadata.android.application]
label = "Advent"
